src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.heart {
  color: #ff00b8;
}

.small {
  font-size: 0.75rem;
}

.button:link, .button:visited {
  border-radius: 99px;
  color: #fff;
  background-color: #ff00b8;
  cursor: pointer;
  border: 15px solid #ff00b8;
  text-decoration: none;
}

.button:hover, .button:active {
  background-color: red;
  border: 15px solid red;
}

